crates/kaijutsu-types/tests/ui/tick_add_int.stderr
error[E0308]: mismatched types
 --> tests/ui/tick_add_int.rs:6:28
  |
6 |     let _ = Tick::new(1) + 2_i64;
  |                            ^^^^^ expected `TickDelta`, found `i64`
  |
help: try wrapping the expression in `kaijutsu_types::TickDelta`
  |
6 |     let _ = Tick::new(1) + kaijutsu_types::TickDelta(2_i64);
  |                            ++++++++++++++++++++++++++     +
